<resources>
    <string name="app_name">Turquoise Demo</string>

    <string name="guide_menu_settings">Settings</string>
    <string name="guide_menu_about">About</string>
    <string name="guide_menu_wipe">WipeCache</string>

    <string name="slide_main_title">Slide Demo</string>
    <string name="slide_drawer_title">Drawer</string>
    <string name="slide_zoomdrawer_title">ZoomDrawer</string>
    <string name="slide_fling_title">Fling</string>
    <string name="slide_card_title">Slide Card</string>
    <string name="slide_list_title">SlideListView</string>
    <string name="slide_list_background_button">OK</string>
    <string name="slide_activity_title">SlideActivity</string>

    <string name="refresh_title">Refresh Demo</string>
    <string name="refresh_overdrag_title">OverDrag Demo</string>
    <string name="refresh_refreshindicator_title">RefreshIndicator Demo</string>
    <string name="refresh_circledrop_title">CircleDropRefreshIndicator Demo</string>

    <string name="other_title">Other Demo</string>
    <string name="other_shadow_title">Shadow Demo</string>
    <string name="other_gradualtitle_title">Gradual Title Demo</string>
    <string name="other_runtime_permission_title">Runtime Permission Demo</string>
    <string name="other_motion_image_title">Gesture Ctrl Demo</string>
    <string name="other_multiitem_viewpager_title">Multi item in ViewPager Demo</string>
    <string name="other_tab_view_title">TabView Demo</string>
    <string name="other_tab_view_helper_title">TabViewHelper Demo</string>
    <string name="other_webview_title">WebView Demo</string>

    <string name="common_indicator_refresh_init">pull to refresh</string>
    <string name="common_indicator_refresh_ready">release to refresh</string>
    <string name="common_indicator_refresh_refreshing">refreshing</string>
    <string name="common_indicator_refresh_succeed">refresh succeed</string>
    <string name="common_indicator_refresh_failed">refresh failed</string>
    <string name="common_indicator_load_init">pull to load</string>
    <string name="common_indicator_load_ready">release to load</string>
    <string name="common_indicator_load_refreshing">loading</string>
    <string name="common_indicator_load_succeed">load succeed</string>
    <string name="common_indicator_load_failed">load failed</string>

    <string name="info_main_title">Device Info</string>
    <string name="screen_info_main_title">Screen Info</string>
    <string name="screen_info_edit_text_hint">input screen size (inch)</string>
    <string name="layout_inspector_info_main_title">Layout Inspector</string>
    <string name="layout_inspector_info_main_switch_button">Enable Layout Inspector</string>
    <string name="layout_inspector_info_main_overlays_button">Force enable/disable draw overlays permission</string>
    <string name="layout_inspector_info_main_accessibility_button">Force enable/disable accessibility permission</string>
    <string name="layout_inspector_info_floating_window_button">LI </string>
    <string name="system_info_main_title">System Info</string>

    <string name="kotlin_main_title">Kotlin Demo</string>
    <string name="simple_kotlin_main_title">Simple Kt Demo</string>

    <string name="fingerprint_main_title">Fingerprint Demo</string>
    <string name="fingerprint_apply_main_title">Fingerprint Apply</string>
    <string name="fingerprint_apply_main_switch_button">Open fingerprint</string>
    <string name="fingerprint_sign_main_title">Fingerprint Signature</string>
    <string name="fingerprint_sign_main_msg_edittext_default">hello fingerprint</string>
    <string name="fingerprint_sign_main_sign_button">Sign</string>

    <string name="temp_main_title">Temp</string>

    <string name="accessibility_description">1.LayoutInspector</string>

</resources>
