<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015-2017 S.Violet
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ Project GitHub: https://github.com/shepherdviolet/turquoise
  ~ Email: shepherdviolet@163.com
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/layout_inspector_info_main_switch_button"/>

        <sviolet.demoa.common.EnhancedSwitchButton
            android:id="@+id/info_layout_inspector_main_switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D0D0D0"/>

    <TextView
        android:id="@+id/info_layout_inspector_main_overlays_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/layout_inspector_info_main_overlays_button"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D0D0D0"/>

    <TextView
        android:id="@+id/info_layout_inspector_main_accessibility_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/layout_inspector_info_main_accessibility_button"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#D0D0D0"/>

    <TextView
        android:id="@+id/info_layout_inspector_main_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
